testing js uglifier

--- a/progress/index.html
+++ b/progress/index.html
@@ -71,7 +71,7 @@
 				</div>
 				
 				<div id="main-navigation-menu" class="flex fd-c ai-e">
-					<img id="hamburger" src="/222dof/vectors/hamburger.svg" onclick="hamburgerClick(this)" data-mode="0" alt="hamburger icon">
+					<img id="hamburger" src="/222dof/vectors/hamburger.svg" data-mode="0" alt="hamburger icon">
 					<ul id="main-navigation-links" class="flex">
 						<li><a href="/222dof/progress/" class="clickable">progress</a></li>
 						<!-- <li><a href="/goals/" class="clickable">goals</a></li> -->
@@ -106,195 +106,10 @@
 	
 	
 <script>
-    /*
-    make each day that has passed clickable -> direct to blog post
-    */
-    const start = new Date(2024, 11, 22);
-    // 222 days between start and end
-    // const end = new Date(2025, 7, 1);
-
-    let day = start.getDate();
-    // currentDate in the iteration through August 1st
-    let currentDate = start;
-
-    let index = 0;
-
-    const heatmap = document.querySelector("#heatmap");
-
-    let currentMonth = null;
-    let currentWeek = null;
-
-    // todays date 
-    let tempD = new Date();
-    let today = new Date(tempD.getFullYear(), tempD.getMonth(), tempD.getDate());
-
-    function createMonth() {
-        /*
-        access currentDate to get month string 
-        */
-        const month = document.createElement("div");
-        month.classList.add("month", "flex", "fd-c", "ai-c")
-
-        const monthLabel = document.createElement("h3");
-        // monthLabel.classList.add("month-label")
-        // get month in string form instead of integer form
-        monthLabel.innerText = currentDate.toLocaleString("en-US", {month: "long"});
-        month.appendChild(monthLabel)
-
-        const daysContainer = document.createElement("table");
-        daysContainer.classList.add("days-container")
-        month.appendChild(daysContainer)
-
-        heatmap.appendChild(month)
-
-        // save month reference to append days to later
-        currentMonth = daysContainer;
-        const week = document.createElement("tr");
-        week.classList.add("week")
-        currentWeek = week;
-    }
-
-    // create month for december (current date)
-    createMonth()
-
-    function newWeek() {
-        currentMonth.appendChild(currentWeek)
-        currentWeek = document.createElement("tr");
-        currentWeek.classList.add("week")
-    }
-
-
-    while (true) {
-        // want to append day to dayContainer at least one time therefore day == 2 instead of 1
-        // if (currentDate.getMonth() == 7 && day == 2) {
-        //     currentMonth.appendChild(currentWeek)
-        //     break;
-        // }
-
-
-        const dayContainer = document.createElement("td");
-        // if (currentDate.getMonth() == 7) {
-        //     if (day > 1) {
-        //         dayContainer.classList.add("empty-day")
-        //     }
-        // }
-        dayContainer.classList.add("day")
-        dayContainer.setAttribute("data-creation", `${currentDate.getMonth()+1}-${currentDate.getDate()}-${currentDate.getFullYear()}`)
-        if (currentDate < today) {
-            console.log(currentDate)
-            dayContainer.classList.add("passed")
-        }
-        currentWeek.appendChild(dayContainer)
-
-        if (day % 7 == 0) {
-            newWeek()
-            if (currentDate.getMonth() == 7) {
-                break;
-            }
-        }
-
-        day += 1;
-        let temp = new Date(currentDate.getFullYear(), currentDate.getMonth(), day);
-        if (temp.getMonth() != currentDate.getMonth()) {
-            newWeek()
-
-            // new month
-            day = temp.getDate();
-            currentDate = temp;
-            currentDate.setDate(day)
-            createMonth()
-        } else {
-            currentDate = temp;
-        }
-        // console.log("new month", `day: ${day} --- new day: ${temp.getDate()} --- new month: ${temp.getMonth()} --- old month${month.getMonth()}`)
-
-
-        if (index > 2000) {
-            break;
-        }
-        index += 1;
-    }
-
-
-    // const posts = JSON.parse("12-22-2024");
-    const posts = "12-22-2024".split(",");
-    for (const post of posts) {
-        const day = document.querySelector(`[data-creation="${post}"]`);
-        const a = document.createElement("a");
-        a.href = `/222dof/posts/${post}/`;
-        a.classList.add("post")
-        a.setAttribute("title", post)
-        day.appendChild(a)
-    }
-
-
-    // Syling reasons August requires there to be 7 days instead of 1 day
-    // So adding style to "hide" days after August, 1st.
-    let childIndex = 0;
-    for (const child of currentMonth.querySelector(".week").children) {
-        if (childIndex >= 1) {
-            child.classList.add("empty-day")
-        }
-        childIndex+=1;
-    }
-
+    let posts = "12-22-2024".split(",");
 </script>
+<script src="/222dof/js/progress.js"></script>
 
-	<script>
-			const message = document.querySelector("#message");
-			let showingMessage = false;
-
-			async function sayMessage(msg) {
-				if (!showingMessage) {
-					showingMessage = true;
-					
-					message.innerText = msg;
-					message.classList.add("reveal-message")
-
-					await new Promise((resolve, reject) => {
-						setTimeout(()=>{
-							message.style.display = "";
-							message.classList.remove("reveal-message")
-							resolve()
-						}, 1000)
-					})
-					showingMessage = false;
-				}
-			}
-
-
-			const counterDay = document.querySelector("#counter-day");
-			// Date() - Date() = milliseconds ... 8640000 = milliseconds in a day
-			const dayDifference = Math.floor((new Date() - new Date(2024, 11, 22)) / 86400000);
-			counterDay.innerText = `${dayDifference} /`;
-
-
-			const mainNavigationLinks = document.querySelectorAll("#main-navigation-links a");
-			for (const link of mainNavigationLinks) {
-				if (window.location.pathname.indexOf(link.innerText) != -1) {
-					link.classList.add("selected-link")
-				}
-			}
-
-			// header fonts look ugly on safari / ios devices
-			if ( navigator.userAgent.includes("Safari") && !navigator.userAgent.includes("Chrome") ) {
-				document.querySelector("html").classList.add("safari");
-			}
-
-			function hamburgerClick(e) {
-				const mode = e.dataset.mode;
-				// 0 = hide
-				// 1 = reveal
-				if (mode == "0") {
-					// reveal
-					e.classList.add("hamburger-selected")
-					e.dataset.mode = "1";
-				} else {
-					// hide
-					e.classList.remove("hamburger-selected")
-					e.dataset.mode = "0";
-				}
-			}
-	</script>
+	<script src="/222dof/js/foundation.js"></script>
 	</body>
 </html>
