--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				</div>
 				
 				<div id="main-navigation-menu" class="flex fd-c ai-e">
-					<img id="hamburger" src="/222dof/vectors/hamburger.svg" onclick="hamburgerClick(this)" data-mode="0" alt="hamburger icon">
+					<img id="hamburger" src="/222dof/vectors/hamburger.svg" data-mode="0" alt="hamburger icon">
 					<ul id="main-navigation-links" class="flex">
 						<li><a href="/222dof/progress/" class="clickable">progress</a></li>
 						<!-- <li><a href="/goals/" class="clickable">goals</a></li> -->
@@ -341,93 +341,8 @@
 		</div>
 	
 	
-<script>
-	const currentMonth = new Date().toLocaleString("en-US", { month: "long" });
+<script src="/222dof/js/index.js"></script>
 
-	function postsOrder(e) {
-		// flip the posts starting from the bottom
-		const monthPosts = document.querySelector(`#${e.dataset.parent}`).querySelector(".month-posts");
-		let posts = monthPosts.querySelectorAll(".post");
-
-		for (let i = 0; i < parseInt(posts.length/2); i++) {
-			const first = posts[0];
-			const second = posts[posts.length - 1 - i];
-
-			monthPosts.insertBefore(second, first)
-			monthPosts.insertBefore(first, posts[posts.length - i])
-		}
-
-		// 0 = descending
-		// 1 = ascending
-		const orderImage = e.previousElementSibling;
-		let order = null;
-		if (e.dataset.order == "0") {
-			order = "ascending";
-			e.dataset.order = "1";
-		} else {
-			order = "descending";
-			e.dataset.order = "0";
-		}
-
-		orderImage.setAttribute("src", `/222dof/vectors/${order}.svg`)
-	}
-</script>
-
-	<script>
-			const message = document.querySelector("#message");
-			let showingMessage = false;
-
-			async function sayMessage(msg) {
-				if (!showingMessage) {
-					showingMessage = true;
-					
-					message.innerText = msg;
-					message.classList.add("reveal-message")
-
-					await new Promise((resolve, reject) => {
-						setTimeout(()=>{
-							message.style.display = "";
-							message.classList.remove("reveal-message")
-							resolve()
-						}, 1000)
-					})
-					showingMessage = false;
-				}
-			}
-
-
-			const counterDay = document.querySelector("#counter-day");
-			// Date() - Date() = milliseconds ... 8640000 = milliseconds in a day
-			const dayDifference = Math.floor((new Date() - new Date(2024, 11, 22)) / 86400000);
-			counterDay.innerText = `${dayDifference} /`;
-
-
-			const mainNavigationLinks = document.querySelectorAll("#main-navigation-links a");
-			for (const link of mainNavigationLinks) {
-				if (window.location.pathname.indexOf(link.innerText) != -1) {
-					link.classList.add("selected-link")
-				}
-			}
-
-			// header fonts look ugly on safari / ios devices
-			if ( navigator.userAgent.includes("Safari") && !navigator.userAgent.includes("Chrome") ) {
-				document.querySelector("html").classList.add("safari");
-			}
-
-			function hamburgerClick(e) {
-				const mode = e.dataset.mode;
-				// 0 = hide
-				// 1 = reveal
-				if (mode == "0") {
-					// reveal
-					e.classList.add("hamburger-selected")
-					e.dataset.mode = "1";
-				} else {
-					// hide
-					e.classList.remove("hamburger-selected")
-					e.dataset.mode = "0";
-				}
-			}
-	</script>
+	<script src="/222dof/js/foundation.js"></script>
 	</body>
 </html>
